[tool.poetry]
name = "soundsense"
version = "0.1.0"
description = "Convert soundwave images to audio"
authors = ["MaxLvL"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
