[tool.poetry]
name = "soundsense"
version = "0.1.0"
description = "Convert soundwave images to audio"
authors = ["MaxLvL"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wave = "^0.0.2"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
